04/07/2025:
    * removed image display animation 
    * removed home button in gallery.html
    * added several image of my old class after I have has graduation

05/07/2025:
    * added upload file feature 
    * added ui for upload file.html
    * added tailwind npm package

09/07/2025:
    * restructure code and routes 
    * add correction build and deploy vercel CLI
    * so I don't no to write more things in changelog.txt 