@@ -1,13 +1,16 @@
-import re
 from flask import render_template, request, redirect, url_for, flash
 import os
 from module.file_checker import check_exist
 
 def upload(app):
 # upload only use by admin
-    @app.route("/upload", methods=["POST", "GET"])
+    UPLOAD_FOLDER = './static/upload_image'
+    @app.route('/upload_form')
+    def upload_form():
+        return render_template('upload.html', files=os.listdir(UPLOAD_FOLDER))
+        
+    @app.route("/upload", methods=["POST"])
     def upload():
-        UPLOAD_FOLDER = './static/upload_image'
         default_path ='./static/upload_image/'
         if request.method == "POST":
             get_list_img = request.files.getlist('img_file')
@@ -22,7 +25,7 @@ def upload(app):
                     imgs_file.save(os.path.join(app.config["UPLOAD_FOLDER"], imgs_file.filename))
                     flash("Images uploaded successfully", "success")
             # print(imgs_file.filename)
-            return redirect(url_for('upload'))
+        return redirect(url_for('upload_form'))
 
-        return render_template('upload.html', files=os.listdir(UPLOAD_FOLDER))
-    app.add_url_rule("/upload","upload", view_func=upload)
+        # return render_template('upload.html', files=os.listdir(UPLOAD_FOLDER))
+    app.add_url_rule("/","upload_form", view_func=upload_form)
