@@ -1,21 +1,0 @@
-{
-  "version": 2.0,
-  "name": "Memorable Gallery",
-  "installCommand": "pip install -r requirements.txt",
-  "builds": [
-    {
-      "src": "main.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "static",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "main.py"
-    }
-  ]
-}
